--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="img/col2.jpg" alt="COLLAGE wala photo">
+      <img src="img/cc122.jpg" alt="COLLAGE wala photo">
       <h2>Here's a small poem for you.</h2>
       <p class="intro">
           Be it "You are my fire",<br>
